2003-01-09  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b4

	* Fixed getStyleSheet() in util.php to actually use GALLERY_BASEDIR
	  correctly, which fixes a long standing bug that prevented *Nuke from
	  properly customizing embedded_style.css.  Thanks, Vallimar!

2003-01-07  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b3

	* Tightened up the leading HTML in the html_wrap files so that we don't
	  generate any white space before including the wrapper.header.  Then,
	  moved the includeHtmlWrap lines up for gallery, album, photo and
	  slideshow.header.  This has the result of putting the resulting
	  javascript inside the <body> tag which means that we don't generate
	  any output until PostNuke gets a chance to call its various header
	  functions.

2003-01-07  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b2

	* Finally made NetPBM's ppmtojpeg/pnmtojpeg an explicit configuration
	  option, instead of trying to autodetect it.  We default to pnmtojpeg,
	  which is forward looking.

2003-01-04  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b1

	* Added the server IP address to the setup/session_test diagnostic to
	  help us find problems with load balanced configurations.

	* Patched ImageMagick's resize code to use single quotes around the *
	  in "+profile '*'" to avoid letting the shell expand the *.

	* Added patch from Kevin Amorin to allow Windows XP publishing to use
	  file names as captions.

	* Enabled hi-tech slideshow for Opera5 also.

	* Fixed the new-album-causes-strange-reordering bug (see 1.3.3-cvs-b1)
	  for Gallery Remote, also.

================================================================================
2002-12-27                      v1.3.3 release
================================================================================

2002-12-27  Bharat Mediratta  <bharat@menalto.com> 1.3.3-cvs-b6

	* Fixed a bug in publish_xp_docs.php that allows a remote exploit by
	  not checking GALLERY_BASEDIR appropriately 