@@ -5,7 +5,7 @@ CONTENTS
   4. How do I install Gallery on Windows?
   5. My webserver doesn't have NetPBM!  Help!  Aiee!
   6. How do I customize Gallery?
-  7. How do I use Gallery as a PHP-Nuke 5.0 / Post-Nuke Module?
+  7. How do I use Gallery as a PHP-Nuke 5.0/6.0 or Post-Nuke Module?
   8. I can't upload large files!
   9. Known problems
  10. HELP!!  WHERE DO I GO FOR HELP?
