@@ -1,3 +1,11 @@
+2003-01-15  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b5
+
+	* Integrated a patch from Ralphe Hesse to support printing on
+	  Fotokasten (a German print service).  
+
+	* Fixed a long standing issue where after album99 we start creating
+	  albums like "albun00".  Now we go from album99 -> album100
+
 2003-01-09  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b4
 
 	* Fixed getStyleSheet() in util.php to actually use GALLERY_BASEDIR
